force-app/main/default/objects/Yosan__c/Yosan__c.object-meta.xml
<CustomObject>
    <label>予算</label>
    <nameField>
        <label>予算名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>