force-app/main/default/objects/Yosan__c/fields/account_sum__c.field-meta.xml
<CustomField>
    <fullName>account_sum__c</fullName>
    <formula>IF ( RecordType.Name = &quot;実績&quot; , account_text__c , 
IF ( RecordType.Name = &quot;予算&quot; , account__r.Name , 
null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>クライアント</label>
    <type>Text</type>
</CustomField>