force-app/main/default/objects/Yosan__c/fields/account_text__c.field-meta.xml
<CustomField>
    <fullName>account_text__c</fullName>
    <label>社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>