force-app/main/default/objects/Yosan__c/fields/ad_type__c.field-meta.xml
<CustomField>
    <fullName>ad_type__c</fullName>
    <label>広告種類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>