force-app/main/default/objects/Yosan__c/fields/agency_keiyakugaku__c.field-meta.xml
<CustomField>
    <fullName>agency_keiyakugaku__c</fullName>
    <label>代理店契約額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>