force-app/main/default/objects/Yosan__c/fields/agency_margin__c.field-meta.xml
<CustomField>
    <fullName>agency_margin__c</fullName>
    <label>代理店手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>