force-app/main/default/objects/Yosan__c/fields/baitai__c.field-meta.xml
<CustomField>
    <fullName>baitai__c</fullName>
    <label>媒体</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>oldmenu</valueSetName>
    </valueSet>
</CustomField>