force-app/main/default/objects/Yosan__c/fields/baitaimei__c.field-meta.xml
<CustomField>
    <fullName>baitaimei__c</fullName>
    <label>媒体名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>