force-app/main/default/objects/Yosan__c/fields/breport_baitai_shisyutsu__c.field-meta.xml
<CustomField>
    <fullName>breport_baitai_shisyutsu__c</fullName>
    <formula>OR ( 
  AND ( 
    RecordType.Name = &quot;支出&quot; , 
    NOT ( ISBLANK ( TEXT ( baitai__c ) ) ) ,
    ISPICKVAL ( shubetsu__c , &quot;実績&quot; )
  ) ,
  AND ( 
    RecordType.Name = &quot;支出&quot; , 
    NOT ( ISBLANK ( TEXT ( baitai__c ) ) ) ,
    ISPICKVAL ( shubetsu__c , &quot;予算&quot; )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レポート種別_媒体支出</label>
    <type>Checkbox</type>
</CustomField>