force-app/main/default/objects/Yosan__c/fields/goukei__c.field-meta.xml
<CustomField>
    <fullName>goukei__c</fullName>
    <label>実績合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>