force-app/main/default/objects/Yosan__c/fields/gousuu__c.field-meta.xml
<CustomField>
    <fullName>gousuu__c</fullName>
    <label>号数</label>
    <length>8</length>
    <type>Text</type>
</CustomField>