force-app/main/default/objects/Yosan__c/fields/HakkanYosanMaster__c.field-meta.xml
<CustomField>
    <fullName>HakkanYosanMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コピー元発刊予算マスタ</label>
    <referenceTo>HakkanYosanMaster__c</referenceTo>
    <relationshipLabel>予算</relationshipLabel>
    <relationshipName>XtXW</relationshipName>
    <type>Lookup</type>
</CustomField>