force-app/main/default/objects/Yosan__c/fields/hannyubi__c.field-meta.xml
<CustomField>
    <fullName>hannyubi__c</fullName>
    <label>搬入日</label>
    <type>Date</type>
</CustomField>