force-app/main/default/objects/Yosan__c/fields/hiduke__c.field-meta.xml
<CustomField>
    <fullName>hiduke__c</fullName>
    <label>売上計上月</label>
    <type>Date</type>
</CustomField>