force-app/main/default/objects/Yosan__c/fields/housuu__c.field-meta.xml
<CustomField>
    <fullName>housuu__c</fullName>
    <label>本数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>