force-app/main/default/objects/Yosan__c/fields/kentouchu__c.field-meta.xml
<CustomField>
    <fullName>kentouchu__c</fullName>
    <label>検討中</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>