force-app/main/default/objects/Yosan__c/fields/menu_id__c.field-meta.xml
<CustomField>
    <fullName>menu_id__c</fullName>
    <label>メニューID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>