force-app/main/default/objects/Yosan__c/fields/menu_type__c.field-meta.xml
<CustomField>
    <fullName>menu_type__c</fullName>
    <label>メニュー名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>