force-app/main/default/objects/Yosan__c/fields/oldbaitai__c.field-meta.xml
<CustomField>
    <fullName>oldbaitai__c</fullName>
    <label>Old媒体</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>oldmenu</valueSetName>
    </valueSet>
</CustomField>