force-app/main/default/objects/Yosan__c/fields/Olds_record_type__c.field-meta.xml
<CustomField>
    <fullName>Olds_record_type__c</fullName>
    <label>Oldスナップショット用レコードタイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>