force-app/main/default/objects/Yosan__c/fields/Oldyosanhi__c.field-meta.xml
<CustomField>
    <fullName>Oldyosanhi__c</fullName>
    <formula>IF ( yosan__c = 0 , 0 , jissekigoukei__c / yosan__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old予算比</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>