force-app/main/default/objects/Yosan__c/fields/published_page__c.field-meta.xml
<CustomField>
    <fullName>published_page__c</fullName>
    <label>掲載面</label>
    <length>255</length>
    <type>Text</type>
</CustomField>