force-app/main/default/objects/Yosan__c/fields/report_account__c.field-meta.xml
<CustomField>
    <fullName>report_account__c</fullName>
    <formula>AND ( 
  RecordType.Name = &quot;収入&quot; , 
  NOT ( ISBLANK ( Account__c ) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レポート種別_クライアント</label>
    <type>Checkbox</type>
</CustomField>