force-app/main/default/objects/Yosan__c/fields/report_baitai_saeki__c.field-meta.xml
<CustomField>
    <fullName>report_baitai_saeki__c</fullName>
    <formula>NOT ( ISBLANK ( TEXT ( baitai__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レポート種別_媒体差益</label>
    <type>Checkbox</type>
</CustomField>