force-app/main/default/objects/Yosan__c/fields/report_baitai_shunyu__c.field-meta.xml
<CustomField>
    <fullName>report_baitai_shunyu__c</fullName>
    <formula>OR ( 
  AND ( 
    RecordType.Name = &quot;実績&quot; , 
    NOT ( ISBLANK ( TEXT ( menu__c ) ) ) 
  ) ,
  AND ( 
    RecordType.Name = &quot;予算&quot; , 
    NOT ( ISBLANK ( TEXT ( menu__c ) ) ) ,
    ISPICKVAL ( shubetsu__c , &quot;収入&quot; )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レポート種別_媒体収入</label>
    <type>Checkbox</type>
</CustomField>