force-app/main/default/objects/Yosan__c/fields/report_eigyou__c.field-meta.xml
<CustomField>
    <fullName>report_eigyou__c</fullName>
    <formula>AND ( 
  RecordType.Name = &quot;収入&quot; , 
  NOT ( ISBLANK ( user__c ) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>レポート種別_営業</label>
    <type>Checkbox</type>
</CustomField>