force-app/main/default/objects/Yosan__c/fields/roumuhi__c.field-meta.xml
<CustomField>
    <fullName>roumuhi__c</fullName>
    <label>労務費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>