force-app/main/default/objects/Yosan__c/fields/saeki_jissekikingaku__c.field-meta.xml
<CustomField>
    <fullName>saeki_jissekikingaku__c</fullName>
    <formula>IF ( RecordType.Name = &quot;収入&quot; ,  jissekigoukei__c , 
IF ( RecordType.Name = &quot;支出&quot; ,  jissekigoukei__c  * -1 ,
null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差益_実績金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>