force-app/main/default/objects/Yosan__c/fields/saeki_shunyu_jissekigoukei__c.field-meta.xml
<CustomField>
    <fullName>saeki_shunyu_jissekigoukei__c</fullName>
    <formula>IF ( RecordType.Name = &quot;収入&quot; , jissekigoukei__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差益_収入の実績合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>