force-app/main/default/objects/Yosan__c/fields/saeki_suikei2__c.field-meta.xml
<CustomField>
    <fullName>saeki_suikei2__c</fullName>
    <formula>IF ( RecordType.Name = &quot;収入&quot; , suikei2__c , 
IF ( RecordType.Name = &quot;支出&quot; , suikei2__c * -1 ,
null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差益_二次推計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>