force-app/main/default/objects/Yosan__c/fields/saeki_tai_yosan__c.field-meta.xml
<CustomField>
    <fullName>saeki_tai_yosan__c</fullName>
    <formula>saeki_jissekikingaku__c - saeki_yosan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>差益_対予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>