force-app/main/default/objects/Yosan__c/fields/shisyutsu_goukei__c.field-meta.xml
<CustomField>
    <fullName>shisyutsu_goukei__c</fullName>
    <formula>agency_margin__c + sonota_costs__c + roumuhi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>代理店手数料＋その他コスト＋労務費</inlineHelpText>
    <label>支出合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>