force-app/main/default/objects/Yosan__c/fields/shubetsu__c.field-meta.xml
<CustomField>
    <fullName>shubetsu__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>収入</fullName>
            </value>
            <value>
                <fullName>支出</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>