force-app/main/default/objects/Yosan__c/fields/sonota_costs__c.field-meta.xml
<CustomField>
    <fullName>sonota_costs__c</fullName>
    <label>その他コスト</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>