force-app/main/default/objects/Yosan__c/fields/suikei1__c.field-meta.xml
<CustomField>
    <fullName>suikei1__c</fullName>
    <label>一次推計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>