force-app/main/default/objects/Yosan__c/fields/suikei2__c.field-meta.xml
<CustomField>
    <fullName>suikei2__c</fullName>
    <label>二次推計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>