force-app/main/default/objects/Yosan__c/fields/suikei3__c.field-meta.xml
<CustomField>
    <fullName>suikei3__c</fullName>
    <label>三次推計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>