force-app/main/default/objects/Yosan__c/fields/tai_suikei3__c.field-meta.xml
<CustomField>
    <fullName>tai_suikei3__c</fullName>
    <formula>jissekigoukei__c  -  suikei3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>対三次推計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>