force-app/main/default/objects/Yosan__c/fields/tai_yosan__c.field-meta.xml
<CustomField>
    <fullName>tai_yosan__c</fullName>
    <formula>goukei__c  -  yosan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>対予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>