force-app/main/default/objects/Yosan__c/fields/tyoku_keiyakugaku__c.field-meta.xml
<CustomField>
    <fullName>tyoku_keiyakugaku__c</fullName>
    <label>直契約額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>