force-app/main/default/objects/Yosan__c/fields/uchimikomi__c.field-meta.xml
<CustomField>
    <fullName>uchimikomi__c</fullName>
    <label>内見込み</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>