force-app/main/default/objects/Yosan__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>users</relationshipName>
    <type>Lookup</type>
</CustomField>