force-app/main/default/objects/Yosan__c/fields/user_sum__c.field-meta.xml
<CustomField>
    <fullName>user_sum__c</fullName>
    <formula>IF ( RecordType.Name = &quot;実績&quot; ,  user_text__c  , 
IF ( RecordType.Name = &quot;予算&quot; ,  user__r.LastName &amp; &quot; &quot; &amp; user__r.FirstName , 
null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>営業担当者</label>
    <type>Text</type>
</CustomField>