force-app/main/default/objects/Yosan__c/fields/user_text__c.field-meta.xml
<CustomField>
    <fullName>user_text__c</fullName>
    <label>広告営業担当</label>
    <length>255</length>
    <type>Text</type>
</CustomField>