force-app/main/default/objects/Yosan__c/fields/yosanhi2__c.field-meta.xml
<CustomField>
    <fullName>yosanhi2__c</fullName>
    <formula>IF ( yosan__c=0 , 0 , 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>予算比2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>