force-app/main/default/objects/Yosan__c/fields/yosanhi__c.field-meta.xml
<CustomField>
    <fullName>yosanhi__c</fullName>
    <formula>IF ( yosan__c = 0 , 0 , goukei__c / yosan__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>予算比</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>