force-app/main/default/objects/Yosan__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <label>クライアント</label>
</RecordType>