force-app/main/default/objects/Yosan__c/recordTypes/baitai.recordType-meta.xml
<RecordType>
    <fullName>baitai</fullName>
    <active>true</active>
    <label>媒体</label>
</RecordType>