force-app/main/default/objects/Yosan__c/recordTypes/Jisseki.recordType-meta.xml
<RecordType>
    <fullName>Jisseki</fullName>
    <active>true</active>
    <label>実績</label>
</RecordType>