force-app/main/default/objects/Yosan__c/recordTypes/Shisyutsu.recordType-meta.xml
<RecordType>
    <fullName>Shisyutsu</fullName>
    <active>true</active>
    <label>支出</label>
</RecordType>