force-app/main/default/objects/Yosan__c/recordTypes/Shunyu.recordType-meta.xml
<RecordType>
    <fullName>Shunyu</fullName>
    <active>true</active>
    <label>収入</label>
</RecordType>