force-app/main/default/objects/Yosan__c/recordTypes/user.recordType-meta.xml
<RecordType>
    <fullName>user</fullName>
    <active>true</active>
    <label>営業担当者</label>
</RecordType>