force-app/main/default/objects/Yosan__c/recordTypes/Yosan.recordType-meta.xml
<RecordType>
    <fullName>Yosan</fullName>
    <active>true</active>
    <label>予算</label>
</RecordType>